--- a/public/css/app.css
+++ b/public/css/app.css
@@ -336,10 +336,11 @@ header .header-right .after-login .after-login-menu {
   background-color: #fff;
   padding: 25px;
   border-radius: 20px;
-  box-shadow: -10px 5px 34px rgba(255, 255, 255, 0.25);
+  box-shadow: 9px 43px 31px rgba(0, 0, 0, 0.05);
 }
 header .header-right .after-login .after-login-menu.active {
   display: block;
+  z-index: 100;
 }
 header .header-right .after-login .after-login-menu .login-mypage-menus {
   margin-bottom: 20px;
